# pyrun

./: .dockerignore  .env.template  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
pyrun/: __init__.py  app.py  main.py
pyrun/execute/: __init__.py  routes.py
pyrun/nsjail/: __init__.py  config.py  nsjail.py
pyrun/validation/: __init__.py  validation.py
scripts/: entrypoint.sh
tests/: test_basic.py
tests/execute/: test_execute.py
tests/validate/: test_validate.py
